// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Marquee > renders with as correctly 1`] = `
"<section data-orientation="horizontal" data-slot="marquee" class="group relative flex items-center overflow-hidden gap-(--gap) [--gap:--spacing(16)] [--duration:20s] before:absolute before:pointer-events-none before:content-[''] before:z-2 before:from-default before:to-transparent after:absolute after:pointer-events-none after:content-[''] after:z-2 after:from-default after:to-transparent flex-row before:inset-y-0 before:start-0 before:h-full before:w-1/3 before:bg-linear-to-r rtl:before:bg-linear-to-l after:inset-y-0 after:end-0 after:h-full after:w-1/3 after:bg-linear-to-l rtl:after:bg-linear-to-r backface-hidden">
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
</section>"
`;

exports[`Marquee > renders with class correctly 1`] = `
"<div data-orientation="horizontal" data-slot="marquee" class="group relative flex items-center overflow-hidden gap-(--gap) [--gap:--spacing(16)] [--duration:20s] before:absolute before:pointer-events-none before:content-[''] before:z-2 before:from-default before:to-transparent after:absolute after:pointer-events-none after:content-[''] after:z-2 after:from-default after:to-transparent flex-row before:inset-y-0 before:start-0 before:h-full before:w-1/3 before:bg-linear-to-r rtl:before:bg-linear-to-l after:inset-y-0 after:end-0 after:h-full after:w-1/3 after:bg-linear-to-l rtl:after:bg-linear-to-r backface-hidden text-xl">
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
</div>"
`;

exports[`Marquee > renders with default slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="marquee" class="group relative flex items-center overflow-hidden gap-(--gap) [--gap:--spacing(16)] [--duration:20s] before:absolute before:pointer-events-none before:content-[''] before:z-2 before:from-default before:to-transparent after:absolute after:pointer-events-none after:content-[''] after:z-2 after:from-default after:to-transparent flex-row before:inset-y-0 before:start-0 before:h-full before:w-1/3 before:bg-linear-to-r rtl:before:bg-linear-to-l after:inset-y-0 after:end-0 after:h-full after:w-1/3 after:bg-linear-to-l rtl:after:bg-linear-to-r backface-hidden">
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden">Default slot</div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden">Default slot</div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden">Default slot</div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden">Default slot</div>
</div>"
`;

exports[`Marquee > renders with orientation correctly 1`] = `
"<div data-orientation="vertical" data-slot="marquee" class="group relative flex items-center overflow-hidden gap-(--gap) [--gap:--spacing(16)] [--duration:20s] before:absolute before:pointer-events-none before:content-[''] before:z-2 before:from-default before:to-transparent after:absolute after:pointer-events-none after:content-[''] after:z-2 after:from-default after:to-transparent flex-col before:inset-x-0 before:top-0 before:w-full before:h-1/3 before:bg-linear-to-b after:inset-x-0 after:bottom-0 after:w-full after:h-1/3 after:bg-linear-to-t backface-hidden">
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max flex-col motion-safe:animate-[marquee-vertical_var(--duration)_linear_infinite] h-[fit-content] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max flex-col motion-safe:animate-[marquee-vertical_var(--duration)_linear_infinite] h-[fit-content] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max flex-col motion-safe:animate-[marquee-vertical_var(--duration)_linear_infinite] h-[fit-content] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max flex-col motion-safe:animate-[marquee-vertical_var(--duration)_linear_infinite] h-[fit-content] backface-hidden"></div>
</div>"
`;

exports[`Marquee > renders with overlay off correctly 1`] = `
"<div data-orientation="horizontal" data-slot="marquee" class="group relative flex items-center overflow-hidden gap-(--gap) [--gap:--spacing(16)] [--duration:20s] flex-row">
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
</div>"
`;

exports[`Marquee > renders with pauseOnHover correctly 1`] = `
"<div data-orientation="horizontal" data-slot="marquee" class="group relative flex items-center overflow-hidden gap-(--gap) [--gap:--spacing(16)] [--duration:20s] before:absolute before:pointer-events-none before:content-[''] before:z-2 before:from-default before:to-transparent after:absolute after:pointer-events-none after:content-[''] after:z-2 after:from-default after:to-transparent flex-row before:inset-y-0 before:start-0 before:h-full before:w-1/3 before:bg-linear-to-r rtl:before:bg-linear-to-l after:inset-y-0 after:end-0 after:h-full after:w-1/3 after:bg-linear-to-l rtl:after:bg-linear-to-r backface-hidden">
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full group-hover:[animation-play-state:paused] flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full group-hover:[animation-play-state:paused] flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full group-hover:[animation-play-state:paused] flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full group-hover:[animation-play-state:paused] flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
</div>"
`;

exports[`Marquee > renders with repeat correctly 1`] = `
"<div data-orientation="horizontal" data-slot="marquee" class="group relative flex items-center overflow-hidden gap-(--gap) [--gap:--spacing(16)] [--duration:20s] before:absolute before:pointer-events-none before:content-[''] before:z-2 before:from-default before:to-transparent after:absolute after:pointer-events-none after:content-[''] after:z-2 after:from-default after:to-transparent flex-row before:inset-y-0 before:start-0 before:h-full before:w-1/3 before:bg-linear-to-r rtl:before:bg-linear-to-l after:inset-y-0 after:end-0 after:h-full after:w-1/3 after:bg-linear-to-l rtl:after:bg-linear-to-r backface-hidden">
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
</div>"
`;

exports[`Marquee > renders with reverse correctly 1`] = `
"<div data-orientation="horizontal" data-slot="marquee" class="group relative flex items-center overflow-hidden gap-(--gap) [--gap:--spacing(16)] [--duration:20s] before:absolute before:pointer-events-none before:content-[''] before:z-2 before:from-default before:to-transparent after:absolute after:pointer-events-none after:content-[''] after:z-2 after:from-default after:to-transparent flex-row before:inset-y-0 before:start-0 before:h-full before:w-1/3 before:bg-linear-to-r rtl:before:bg-linear-to-l after:inset-y-0 after:end-0 after:h-full after:w-1/3 after:bg-linear-to-l rtl:after:bg-linear-to-r backface-hidden">
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full ![animation-direction:reverse] flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full ![animation-direction:reverse] flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full ![animation-direction:reverse] flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around gap-(--gap) min-w-max w-full ![animation-direction:reverse] flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden"></div>
</div>"
`;

exports[`Marquee > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" data-slot="marquee" class="group relative flex items-center overflow-hidden gap-(--gap) [--gap:--spacing(16)] [--duration:20s] before:absolute before:pointer-events-none before:content-[''] before:z-2 before:from-default before:to-transparent after:absolute after:pointer-events-none after:content-[''] after:z-2 after:from-default after:to-transparent flex-row before:inset-y-0 before:start-0 before:h-full before:w-1/3 before:bg-linear-to-r rtl:before:bg-linear-to-l after:inset-y-0 after:end-0 after:h-full after:w-1/3 after:bg-linear-to-l rtl:after:bg-linear-to-r backface-hidden">
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden gap-4"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden gap-4"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden gap-4"></div>
  <div data-slot="marquee-content" class="flex items-center shrink-0 justify-around min-w-max w-full flex-row motion-safe:animate-[marquee_var(--duration)_linear_infinite] motion-safe:rtl:animate-[marquee-rtl_var(--duration)_linear_infinite] backface-hidden gap-4"></div>
</div>"
`;
